# speedtests

./: .gitignore  README.md  collect-stats.py  seed-db.py
docker/: docker-compose.yml
dotnet/: Barcode.cs  BarcodeStatus.cs  Dockerfile  Html.cs  Program.cs  appsettings.json  dotnet-speedtest.csproj  dotnet-speedtest.sln
dotnet/Pages/: Barcode.cshtml  Barcode.cshtml.cs
dotnet/Pages/Shared/: _Layout.cshtml
dotnet/Properties/: launchSettings.json
go/: .air.toml  Dockerfile  go.mod  go.sum  main.go
go-fiber/: Dockerfile  go.mod  main.go
go/views/: barcode.jet  base.jet  not-found.jet
k6/: .dashboard.js  localhost.js  remote.js  replay.ps1  run-all.ps1  run.ps1
k6/shared/: global-options.js  tests.js
php/: Dockerfile  composer.json  endpoints.php  index.php  php.ini  slim-config.php
php/twig-templates/: barcode.twig  base.twig  not-found.twig
python/: Dockerfile  requirements.txt
python/src/: main.py
python/src/templates/: barcode.html.j2  base.html.j2  not-found.html.j2
rust/: Cargo.toml  Dockerfile
rust/.sqlx/: query-a64fdd39a97207e70241ea69c5ef3d1e0610e9b13576ba7480b68daafd7f0d75.json
rust/src/: main.rs
rust/templates/: barcode.html  not-found.html
