[package]
name = "speedtests-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "mysql", "tls-rustls", "chrono"] }
tokio = { version = "1.29.1", features = ["macros","rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
